# Airline-Stocks

./: .gitignore  LICENSE  README.md  american_airlines_prices.csv  docker-compose.yml  dockerfile  index.html  jest.config.cjs  nginx.conf  oil_prices.csv  package.json  sp_500_index.csv  ubuntu@ec2-3-8-147-100.eu-west-2.compute.amazonaws.com
.github/workflows/: main.yml
assets/: casestudies.json  continents.geojson  continents.json  historicaltrends.json
cpp-server/: CMakeLists.txt  dockerfile  main.cpp  test
cpp-server/include/: black_scholes.hpp  monte_carlo_option.hpp
cpp-server/src/: black_scholes.cpp  main.cpp  monte_carlo.cpp
cpp-server/test.dSYM/Contents/Resources/DWARF/: test
public/assets/: continents.json  fleetsize.json  sampleapi.json
server/: dockerfile  pyproject.toml  requirements.txt  run.py
server/api/: .env  __init__.py  data_retrieval.py  file_saver.py  modelhandler.py  test.py  var_model.py
server/api/routes/: data_test.py  var.py
server/data/: forecast.json
server/tests/: test_dataretrieval.py  test_index.py  test_var.py
src/: App.tsx  main.tsx
src/app/: home.test.tsx  home.ts  store.test.ts  store.ts
src/components/: AirlineCard.test.tsx  AirlineCard.tsx  FleetChart.tsx  Footer.test.tsx  Footer.tsx  GrowthDoughnutChart.tsx  Header.test.tsx  Header.tsx  IndustryGraph.tsx  Map.tsx  NumAirChat.tsx  TextCharts.tsx
src/pages/: CaseStudies.tsx  CaseStudy.tsx  Home.tsx  Options.tsx  Var.tsx
